# solidc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Example-example.html  Makefile  README.md  _2home_2runner_2work_2solidc_2solidc_2include_2flags_8h-example.html  _2home_2runner_2work_2solidc_2solidc_2include_2vec_8h-example.html  _2home_2runner_2work_2solidc_2solidc_2src_2flags_8c-example.html  aarch64-compile.txt  align_8h.html  align_8h__dep__incl.map  align_8h__dep__incl.md5  align_8h_source.html  aligned__alloc_8h.html  aligned__alloc_8h__dep__incl.map  aligned__alloc_8h__dep__incl.md5  aligned__alloc_8h__incl.map  aligned__alloc_8h__incl.md5  aligned__alloc_8h_source.html  annotated.html  arena.c  arena.h  arena_8c_source.html  arena_8h_source.html  array_8h_source.html  bench_arena.c  benchmark.c  bplustree.c  bplustree.h  bplustree_test.c  cache.c  cache_8c.html  cache_8c__incl.map  cache_8c__incl.md5  cache_8c_a0ba276605ad3bca9dfbd3cac521ec379_cgraph.md5  cache_8c_source.html  cache_8h.html  (+1828 more)
.github/workflows/: docs.yml  release-assets.yml
aur/solidc/: .SRCINFO  .gitignore  PKGBUILD  README.md  deploy.sh
benchmarks/: CMakeLists.txt  arena.c  arena.h  bench.c  bench_arena.c  benchmark.c  threadpool_bench.c
command/: Makefile  pipeline.go
docs/html/: annotated.html  classes.html  doxygen_crawl.html  files.html  index.html  list_8h_source.html  lock_8h_source.html  log_8h_source.html  map_8h_source.html  md_README.html  ordered__map_8h_source.html  os_8h_source.html  pages.html  set_8h_source.html  slist_8h_source.html  socket_8h_source.html  solidc_8h_source.html  str_8h_source.html  structDirectory.html  structFile.html  structPIPE.html  structProcess.html  structSocket.html  structTask.html  structThreadData.html  structThreadPool.html  structentry.html  structlist__node.html  structlist__t.html  structmap.html  structmap__iterator.html  structordered__map__node.html  structordered__map__t.html  structslist__node.html  structslist__t.html  structvec__t.html  trie_8h_source.html  vec_8h_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  files.tex  list_8h_source.tex  lock_8h_source.tex  log_8h_source.tex  map_8h_source.tex  md_README.tex  ordered__map_8h_source.tex  os_8h_source.tex  refman.tex  set_8h_source.tex  slist_8h_source.tex  socket_8h_source.tex  solidc_8h_source.tex  str_8h_source.tex  structDirectory.tex  structFile.tex  structPIPE.tex  structProcess.tex  structSocket.tex  structTask.tex  structThreadData.tex  structThreadPool.tex  structentry.tex  structlist__node.tex  structlist__t.tex  structmap.tex  structmap__iterator.tex  structordered__map__node.tex  structordered__map__t.tex  structslist__node.tex  structslist__t.tex  structvec__t.tex  trie_8h_source.tex  vec_8h_source.tex
examples/: .gitignore  CMakeLists.txt  graphics.c  log_example.c  main.c  main.cpp  ml_demo.c  server.c
examples/server/: epoll.h  httpd  httpd.c  tcpserver.c  tcpserver.h
include/: align.h  aligned_alloc.h  arena.h  array.h  automem.h  cache.h  channel.h  ckdint.h  cmp.h  cstr.h  cstr_array.h  csvparser.h  defer.h  dotenv.h  dynarray.h  env.h  epoll.h  file.h  filepath.h  flag.h  flags.h  global.h  hash.h  hashset.h  larena.h  lfqueue.h  linear_alg.h  list.h  lock.h  macros.h  map.h  matrix.h  memory_pool.h  ml.h  optional.h  pipeline.h  platform.h  prettytable.h  process.h  regex.h  (+26 more)
internal/: arena_legacy.c  arena_legacy.h  epoll.c  epoll.h  fast_mem.c  fast_mem.h  fast_mem_bench.c  malloc.c  map.c  map.h  mem_advanced.c  memory.c  my_malloc.c  my_malloc.h  my_malloc_test.c  server.c  solidc.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+94 more)
src/: arena.c  arena_legacy.c  cache-spec.md  cache.c  cstr.c  cstr_array.c  csvparser.c  dotenv.c  dynarray.c  file.c  filepath.c  flag.c  flags.c  hash.c  larena.c  lfqueue.c  list.c  lock.c  map.c  memory_pool.c  ml.c  pipeline.c  prettytable.c  process.c  regex.c  slist.c  slists.c  socket.c  stdstreams.c  str_to_num.c  string.c  string_array.c  strsim.c  strton.c  thread.c  threadpool.c  trie.c  unicode.c  vec.c  win32_dirent.c  (+2 more)
test_cmake/: CMakeLists.txt  main.c
tests/: .clangd  CMakeLists.txt  arena_test.c  array_test.c  cache_test.c  channel_test.c  cstr_array_test.c  cstr_test.c  csvparser_test.c  defer_test.c  dotenv_test.c  dynarray_test.c  file_test.c  fileio_test.c  filepath_test.c  flag_test.c  flags_test.c  hash_test.c  hashset_test.c  larena_test.c  lfqueue_test.c  linear_alg_test.c  list_test.c  list_test.cpp  lock_test.c  map_test.c  map_test.cpp  matrix_test.c  memory_pool_test.c  optional_test.c  optional_test.cpp  ordered_map_test.cpp  os_test.cpp  prettytable_test.c  process_test.c  regex_test.c  safe_map_test.c  set_test.cpp  slist_test.c  slist_test.cpp  (+23 more)
